# acelon-oracle-contracts

./: README.md
evm/: .gitignore  README.md
evm/contracts/: AcelonOracle.sol  AcelonStructs.sol  IAcelonOracle.sol
evm/tests/: acelon.test.js
gear/: Cargo.toml  README.md  build.rs  rust-toolchain.toml
gear/app/: Cargo.toml
gear/app/src/: lib.rs  service.rs  storage.rs  types.rs  utils.rs
gear/client/: Cargo.toml  build.rs
gear/client/src/: lib.rs
gear/src/: lib.rs
gear/tests/: gtest.rs
ink/: Cargo.toml  README.md  lib.rs  traits.rs  types.rs
substrate-pallet/: Cargo.toml  README.md  rust-toolchain.toml
substrate-pallet/src/: benchmarking.rs  lib.rs  migration.rs  mock.rs  tests.rs  traits.rs  types.rs
