[package]
name = "acelon-oracle-contract"
version = "0.1.0"
authors = ["Papers AG <info@papers.ch>"]
edition = "2021"

[dependencies]
ink = { version = "5.0.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
  "derive",
] }
scale-info = { version = "2", default-features = false, features = ["derive"] }

[dev-dependencies]
ink_e2e = { version = "5.0.0" }
hex-literal = "0.4"
blake2b_simd = "1"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = ["ink/std"]
ink-as-dependency = []
e2e-tests = []
