[package]
name = "pallet-acelon-oracle"
version = "0.1.0"
edition = "2021"

[dependencies]
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
  "derive",
] }
scale-info = { version = "2", default-features = false, features = ["derive"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }

# Substrate
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.16.0", optional = true }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.16.0" }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.16.0" }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.16.0" }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.16.0" }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.16.0" }

hex-literal = { version = "0.4", optional = true }

[dev-dependencies]
sp-version = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.16.0" }
parachain-info = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.16.0", package = "staging-parachain-info" }
parachains-common = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.16.0" }

hex-literal = "0.4"

[features]
default = ["std"]
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "hex-literal",
]

std = [
  "scale/std",
  "frame-benchmarking/std",
  "frame-support/std",
  "frame-system/std",
  "scale-info/std",
  "sp-core/std",
  "sp-io/std",
  "sp-std/std",
  "serde/std",
]

try-runtime = ["frame-support/try-runtime"]
